--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .avatar.img {
-  height: 250px;
+  height: 200px;
   padding-top: 5em;
 }
 
@@ -16,4 +16,25 @@
   background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   width: 100%;
   height: 100%;
+}
+
+.banner-text {
+  background-color: black;
+  opacity: .8;
+  width: 75%;
+  margin: auto;
+  border-radius: 10px;
+}
+
+.banner-text h1 {
+  font-size: 66px;
+  font-weight: bold;
+  color: white;
+}
+
+.banner-text p {
+  color: white;
+  font-size: 20px;
+  padding: 2em;
+
 }
