--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 .avatar.img {
   height: 200px;
-  padding-top: 5em;
+  padding-top: 2em;
 }
 
 .landing-grid {
@@ -21,7 +21,8 @@
 .banner-text {
   background-color: black;
   opacity: .8;
-  width: 75%;
+  text-align: center;
+  width: 80%;
   margin: auto;
   border-radius: 10px;
 }
