--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,6 @@
 
 .contact-body {
   margin: auto;
-  background: grey;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -68,7 +67,7 @@
   height: 550px;
   background: white;
   color: black;
-  border: 2px solid red;
+  border: 2px solid purple;
   margin-bottom: 20px;
 }
 
@@ -84,5 +83,10 @@
 .contact-grid hr {
   border-top: 5px dotted black;
   width: 50%;
-  margin: auto;  
+  margin: auto;
+}
+
+.contact-list i {
+  font-size: 30px;
+  padding-right: 5rem;
 }
